# meta-scalar

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate.ps1  validate_pipeline.py
.github/workflows/: validate-pipeline.yml
files/: CLAUDE.md  README.md  design.md  implementation_guide.md  pre_upload_checklist.md  requirements.md  reward_design.md  tasks_and_graders.md
scripts/: validate_pipeline.py
server/: app.py
support_triage_env/: __init__.py  client.py  models.py
support_triage_env/data/: emails.json  generate_dataset.py  ground_truth.json
support_triage_env/graders/: common.py  task1_grader.py  task2_grader.py  task3_grader.py
support_triage_env/rewards/: __init__.py  reward_calculator.py
support_triage_env/server/: Dockerfile  app.py  environment.py
support_triage_env/tasks/: __init__.py  base_task.py  task1_classify.py  task2_batch_triage.py  task3_full_pipeline.py
tests/: test_app_api.py  test_data_and_graders.py  test_env_and_task3_edges.py  test_environment.py  test_graders.py  test_models.py  test_reward.py  test_reward_edge_cases.py
